--- a/FontEnd/src/app/views/customer/favorite/favorite.component.html
+++ b/FontEnd/src/app/views/customer/favorite/favorite.component.html
@@ -33,9 +33,9 @@ js-comp-ver-4.9.2 vc_responsive ">
                                                 <img width="207" height="265" src="{{item.imgCake}}"
                                                     class="attachment-cakestore_product_thumb size-cakestore_product_thumb wp-post-image"
                                                     alt="cake6" sizes="(max-width: 207px) 100vw, 207px" />
-                                                <div class="button yith-wcqv-button" data-product_id="78">
+                                                <!-- <div class="button yith-wcqv-button" data-product_id="78">
                                                     <i class="fa fa-search"></i>
-                                                </div>
+                                                </div> -->
                                             </button>
                                         </div>
 
